--- a/pom.xml
+++ b/pom.xml
@@ -1,128 +1,180 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.rsmart</groupId>
-	<artifactId>rfabric-jasper-tokenauth</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+  <groupId>com.rsmart</groupId>
+  <artifactId>rfabric-jasper-tokenauth</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
-	<name>rfabric-jasper-tokenauth</name>
-	<url>http://maven.apache.org</url>
+  <name>rfabric-jasper-tokenauth</name>
+  <url>http://maven.apache.org</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<dependencies>
-	
-	  <!-- JasperReports dependencies -->
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <cxf.version>2.7.1</cxf.version>
+    <rice.version>2.2.0</rice.version>
+    <jasperserver-repo>http://jasperforge.org/svn/repos/maven2/</jasperserver-repo>
+  </properties>
+  
+  <dependencies>
+    
+    <!-- JasperReports dependencies -->
     <dependency>
       <groupId>com.jaspersoft.jasperserver</groupId>
       <artifactId>jasperserver-common-ws</artifactId>
       <version>4.7.0</version>
     </dependency>
-		<dependency>
-		  <groupId>com.jaspersoft.jasperserver</groupId>
-		  <artifactId>jasperserver-remote-services</artifactId>
+    <dependency>
+      <groupId>com.jaspersoft.jasperserver</groupId>
+      <artifactId>jasperserver-remote-services</artifactId>
       <version>4.7.0</version>
-		</dependency>    
-	  
+    </dependency>    
+    
     <!-- Servlet dependencies -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.4</version>
-			<scope>provided</scope>
-		</dependency>
-		
-		<!-- logging dependencies -->
-		<dependency>
-		  <groupId>log4j</groupId>
-		  <artifactId>log4j</artifactId>
-		  <version>1.2.12</version>
-		</dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.4</version>
+      <scope>provided</scope>
+    </dependency>
+    
+    <!-- logging dependencies -->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.12</version>
+    </dependency>
 
-		<!-- Spring Framework dependencies -->
-		<dependency>
+    <!-- Spring Framework dependencies -->
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>3.1.0.RELEASE</version>		
-		</dependency>
-		<dependency>
-		  <groupId>org.springframework.security</groupId>
-		  <artifactId>spring-security-core</artifactId>
-		  <version>2.0.7.RELEASE</version>
+      <version>3.1.0.RELEASE</version>      
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>2.0.7.RELEASE</version>
       <exclusions>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-remoting</artifactId>
-	      </exclusion>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-web</artifactId>
-	      </exclusion>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-webmvc</artifactId>
-	      </exclusion>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-jdbc</artifactId>
-	      </exclusion>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-core</artifactId>
-	      </exclusion>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-context</artifactId>
-	      </exclusion>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-aop</artifactId>
-	      </exclusion>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-context-support</artifactId>
-	      </exclusion>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-support</artifactId>
-	      </exclusion>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-beans</artifactId>
-	      </exclusion>
-	      <exclusion>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-test</artifactId>
-	      </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-remoting</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-web</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-webmvc</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-aop</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context-support</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-support</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-beans</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-test</artifactId>
+        </exclusion>
       </exclusions>
-		</dependency>
+    </dependency>
 
-		<!-- testing dependencies -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>1.7</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>1.9.5</version>
-		</dependency>
-	</dependencies>
+    <!-- testing dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.5</version>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>  
+      <plugin>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-codegen-plugin</artifactId>
+        <version>${cxf.version}</version>
+        <executions>
+          <execution>
+			<id>generate-sources</id>
+			<phase>generate-sources</phase>
+			<configuration>
+              <sourceRoot>${project.build.directory}/generated/cxf</sourceRoot>
+              <wsdlOptions>
+                <wsdlOption>
+                  <wsdlArtifact>
+                    <groupId>org.kuali.rice</groupId>
+                    <artifactId>rice-kim-api</artifactId>
+                    <version>${rice.version}</version>
+                    <classifier>PermissionService</classifier>
+                    <type>wsdl</type>
+                  </wsdlArtifact>
+                  <!--
+                  <extraargs>
+                    <extraarg>-b</extraarg>
+                    <extraarg>${basedir}/src/main/resources/wsdl/rice-kim-api-${rice.version}-PermissionService.xml</extraarg> 
+                  </extraargs>
+                  -->
+                </wsdlOption>
+              </wsdlOptions>
+			</configuration>
+			<goals>
+              <goal>wsdl2java</goal>
+			</goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.kuali.rice</groupId>
+            <artifactId>rice-kim-api</artifactId>
+            <version>${rice.version}</version>
+            <classifier>PermissionService</classifier>
+            <type>wsdl</type>
+          </dependency>
+        </dependencies>
+      </plugin>      
+    </plugins>
+  </build>
   <repositories>
     <repository>
       <id>js-repo-svn</id>
