Using the KIM endpoint url at runtime to specify how webservices connect to KIM

--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,12 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <cxf.version>2.7.1</cxf.version>
-    <rice.version>2.2.0</rice.version>
     <jasperserver-repo>http://jasperforge.org/svn/repos/maven2/</jasperserver-repo>
+    <kim.endpoint.url>http://localhost:8080/kr-dev/kim/remoting/</kim.endpoint.url>
+    <rice.version>2.1.1</rice.version>
+    <kim.identityservice.wsdl>http://maven.kuali.org.s3.amazonaws.com/release/org/kuali/rice/rice-kim-api/${rice.version}/rice-kim-api-${rice.version}-IdentityService.wsdl</kim.identityservice.wsdl>
+    <kim.permissionservice.wsdl>http://maven.kuali.org.s3.amazonaws.com/release/org/kuali/rice/rice-kim-api/${rice.version}/rice-kim-api-${rice.version}-PermissionService.wsdl</kim.permissionservice.wsdl>
+    <kim.roleservice.wsdl>http://maven.kuali.org.s3.amazonaws.com/release/org/kuali/rice/rice-kim-api/${rice.version}/rice-kim-api-${rice.version}-RoleService.wsdl</kim.roleservice.wsdl>
   </properties>
   
   <dependencies>
@@ -142,19 +146,13 @@
               <sourceRoot>${project.build.directory}/generated/cxf</sourceRoot>
               <wsdlOptions>
                 <wsdlOption>
-                  <wsdlArtifact>
-                    <groupId>org.kuali.rice</groupId>
-                    <artifactId>rice-kim-api</artifactId>
-                    <version>${rice.version}</version>
-                    <classifier>PermissionService</classifier>
-                    <type>wsdl</type>
-                  </wsdlArtifact>
-                  <!--
-                  <extraargs>
-                    <extraarg>-b</extraarg>
-                    <extraarg>${basedir}/src/main/resources/wsdl/rice-kim-api-${rice.version}-PermissionService.xml</extraarg> 
-                  </extraargs>
-                  -->
+                  <wsdl>${kim.identityservice.wsdl}</wsdl>
+                </wsdlOption>
+                <wsdlOption>
+                  <wsdl>${kim.permissionservice.wsdl}</wsdl>
+                </wsdlOption>
+                <wsdlOption>
+                  <wsdl>${kim.roleservice.wsdl}</wsdl>
                 </wsdlOption>
               </wsdlOptions>
 			</configuration>
@@ -163,15 +161,6 @@
 			</goals>
           </execution>
         </executions>
-        <dependencies>
-          <dependency>
-            <groupId>org.kuali.rice</groupId>
-            <artifactId>rice-kim-api</artifactId>
-            <version>${rice.version}</version>
-            <classifier>PermissionService</classifier>
-            <type>wsdl</type>
-          </dependency>
-        </dependencies>
       </plugin>      
     </plugins>
   </build>
